react-ui/src/App.css
/*Top level style overwrite*/

p {
  color: rgb(85, 84, 89);
  font-size: 16px;
  font-weight: 300;
}

h3 {
  font-size: 16px;
  font-weight: 600;
}

pre {
  display: block;
  padding: 0px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  background-color: #ffffff;
  border: 0px solid #ccc;
}
/*App & Intro*/

.App {
  margin-left: 50px;
  margin-right: 50px;
  margin-bottom: 50px;
}

.intro {
  margin-bottom: 50px;
}

.intro p {
  margin-top: 0px;
  margin-bottom: 0px;
}

.intro h1 {
  margin-bottom: 10px;
}

/*Sections*/

.call-section {
  margin-bottom: 60px;
}

.call-section h2 {
  color: rgb(163, 71, 183);
  font-size: 25px;
  font-weight: 600;
  margin-bottom: 10px;
}

.call-section h3 {
  margin-top: 0px;
  margin-bottom: 20px;
}

.App a {
  color: #f60;
}

.button-container p {
  display: inline;
}

.button-container button {
  border: 0px;
  border-radius: 4px;
  color: rgb(255, 255, 255);
  font-weight: 400;
  box-shadow: rgba(63, 49, 178, 0.1) 0px 2px 4px,
    rgba(63, 49, 178, 0.03) 0px 4px 14px;
  transition: all 0.15s ease-out;
  background-color: rgb(163, 71, 183);
  font-size: 17px;
  padding: 7px 22px 8px;
  outline: none;
  /*margin-right: 20px;*/
  /*width: 150px;*/
}

.hljs {
  max-height: 250px;
  max-width: 500px;
  border-radius: 4px;
}

.arrow {
  color: rgb(163, 71, 183);
  font-size: 15px;
}

.number {
  color: rgb(163, 71, 183);
  font-size: 30px;
  font-weight: 800;
}

.api-call {
  color: #a0a0a0;
  padding-left: 15px;
  display: inline-block;
  margin-top: 6px;
  font-size: 18px;
  color: #c8c8c7;
}

.call {
}

.parameters input {
  margin-left: 10px;
}

.parameters label {
  margin-right: 25px;
}

.parameters {
  margin-bottom: 15px;
}

.result-section {
  margin-top:10px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

